--- a/dropbox-deployment.yml
+++ b/dropbox-deployment.yml
@@ -1,4 +1,4 @@
 deploy:
-  dropbox_path: /zOI (GDM) Generalized Data Model/ # The path to the folder on Dropbox where the files will go
+  dropbox_path: /zOI (GDM) Generalized Data Model # The path to the folder on Dropbox where the files will go
   artifacts_path: artifacts/gdm_schemas.tbz # can be a single file, or a path
   debug: true # if you want to see more logs
